<resources>
    <string name="app_name">KwesiSHop</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_email_address">Email address</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_door_number">Door Number</string>
    <string name="text_address">Address</string>
    <string name="text_post_code">Post Code</string>
    <string name="text_shop">Shop</string>
    <string name="text_basket">Basket</string>
    <string name="text_home">Home</string>
    <string name="text_orders">Orders</string>
    <string name="text_settings">Settings</string>
    <string name="text_update_account">Update Account</string>
    <string name="text_admin">Admin</string>
    <string name="text_products">Products</string>
    <string name="text_categories">Categories</string>
    <string name="text_users">Users</string>
    <string name="text_add_product">Add Product</string>
    <string name="text_add_order">Add Order</string>
    <string name="text_add_user">Add User</string>
    <string name="text_add_category">Add Category</string>
</resources>