<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_settings_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/text_name"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/user_settings_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/text_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/user_settings_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/user_settings_doorNumber_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="doorNumber"
        android:ems="10"
        android:hint="@string/text_door_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/user_settings_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/text_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/user_settings_postCode_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalCode"
        android:ems="10"
        android:hint="@string/text_post_code"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/user_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register" />

</LinearLayout>